--- a/html/scss/_layout.scss
+++ b/html/scss/_layout.scss
@@ -45,7 +45,7 @@
     }
     .h_bot {
         .logo {
-            width: 160px; height: 43px;
+            width: 145px; height: 40px;
             a {
                 img {width: 100%; height: 100%;}
                 span {
@@ -292,8 +292,6 @@
         display: flex; justify-content: center;
         padding: 120px 0 76px;
         overflow: hidden;
-
-        background-color: #aaa;
         .center {
             width: 70%;
             .title_box {
@@ -370,8 +368,6 @@
         display: flex; justify-content: center;
         padding: 150px 0 200px;
         overflow: hidden;
-        // background-color: #edf6ff;
-        background: #bbb;
         .center {
             width: 100%;
             .title_box {
@@ -385,15 +381,15 @@
                     transition: all 0.5s;
                 }
                 .left {
-                    height: 500px;
+                    // height: 500px;
                     transform: translateX(-200%);
                     video {width: 100%; height: 100%;}
                 }
                 .right {
-                    height: 500px;
+                    // height: 500px;
                     transform: translateX(200%);
                     .box_list {
-                        height: 23%;
+                        // height: 23%;
                         background-color: #d6e7ff;
                         margin-bottom: 1.5%;
                         border-radius: 10px;
@@ -428,7 +424,6 @@
     .tour_bus {
         display: flex; justify-content: center;
         padding: 150px 0 325px;
-        background-color: #edf6ff;
         overflow: hidden;
         .center {
             width: 70%;
@@ -478,17 +473,18 @@
     }
     //메인페이지 local_count 영역
     .local_count {
-        width: 100%; height: 420px;
+        width: 100%; 
         display: flex; justify-content: center;
         align-items: center;
-        background-image: url(/img/count_bg.jpg);
-        background-position: center;
-        background-size: cover;
-        background-repeat: no-repeat;
-        background-position: center;
-        margin: 200px 0 250px;
-
-        background-color: #ccc;
+        padding-top: 50px;
+        // height: 420px;
+        // background-image: url(/img/count_bg.jpg);
+        // background-position: center;
+        // background-size: cover;
+        // background-repeat: no-repeat;
+        // background-position: center;
+        margin: 150px 0 250px;
+        background-color: skyblue;
         .center {
             width: 57%;
             .title_box {
@@ -499,6 +495,7 @@
             }
             .count_wrap {
                 display: flex; justify-content: space-between;
+                padding-bottom: 50px;
                 .count_box {
                     width: 18%; margin: 0 2%;
                     text-align: center;
@@ -507,9 +504,10 @@
                     padding: 20px 5px;
                     box-shadow: 0px 5px 10px rgba(0,0,0,0.5);
                     .img {
-                        height: 95px;
-                        margin-bottom: 20px;
-                        img {width: 80%; height: 100%;}
+                        width: 60px;
+                        height: 50px;
+                        margin: 0 auto 20px;
+                        img {width: 100%; height: 100%;}
                     }
                     .local_name {font-size: 18px; margin-bottom: 12px;}
                     .count_number {font-size: 20px;}
@@ -522,8 +520,6 @@
         display: flex; justify-content: center;
         padding: 150px 0 193px;
         overflow: hidden;
-
-        background-color: #ddd;
         .center {
             width: 57%;
             .title_box {
@@ -535,20 +531,22 @@
                 display: flex; position: relative;
                 > div {transition: all 0.5s;}
                 .left {
-                    width: 40%; height: 450px;
+                    width: 40%; height: 530px;
                     background-image: url("/img/package_left.jpg");
                     background-repeat: no-repeat;
                     background-size: cover;
-                    padding: 87px 0 0 20px;
+                    // padding: 87px 0 0 20px;
                     border-radius: 10px;
                     transform: translateX(-200%);
                     .big_text {
                         font-size: 30px; line-height: 35px;
                         margin-bottom: 50px;
                         color: #fff;
+                        padding: 87px 0 0 20px;
                         text-shadow: 5px 5px 10px rgba(0,0,0,0.5);
                     }
                     .package_menu {
+                        padding-left: 20px;
                         li {
                             width: 53%;
                             background-color: #dce8f9;
@@ -579,7 +577,7 @@
                             // border: 1px solid #cbcbcb;
                             border-radius: 10px;
                             overflow: hidden;
-                            background-color: #fff;
+                            background-color: #fbfbfb;
                             a {
                                 color: #000;
                                 .img_wrap {
@@ -587,8 +585,8 @@
                                     img {width: 100%; height: 100%;}
                                 }
                                 .package_info {
+                                    border: 1px solid #cbcbcb;
                                     padding: 10px;
-                                    // border: 1px solid #cbcbcb;
                                     border-radius: 0 0 10px 10px;
                                     .tour_title {
                                         margin-top: 2px; font-size: 18px;
@@ -691,31 +689,33 @@
             }
         }
     }
-    .banner.detail {
-        // .center {background-color: palegreen;}
-    }
+    // .banner.detail {
+    //     // .center {background-color: palegreen;}
+    // }
     //목록페이지
     .travel_list {
         display: flex; justify-content: center;
         .center {
-            width: 57%; background-color: #aedef7;
+            width: 57%;
+            // background-color: #aedef7;
             padding: 50px; box-sizing: border-box;
+            .text_box {
+                text-align: center;
+                margin-bottom: 30px;
+                .title {font-size: 25px; margin-bottom: 12px;}
+            }
             .list_wrap {
                 // margin-top: 50px;
-                .text_box {
-                    text-align: center;
-                    margin-bottom: 30px;
-                    .title {font-size: 25px; margin-bottom: 12px;}
-                }
                 .list_box {
-                    width: 100%;
+                    width: 65%;
                     margin: 0 auto;
                     // background-color: olivedrab;
-                    background-color: #fff;
+                    background-color: #f9f9f9;
                     display: flex; justify-content: space-between;
                     align-items: center; padding: 30px;
                     box-sizing: border-box; margin-bottom: 30px;
                     border-radius: 10px;
+                    border: 3px solid #cdcdcd;
                     .left {
                         width: 70%;
                         .user_name {
@@ -756,12 +756,12 @@
                 }
             }
             .btn_wrap {
-                display: flex; justify-content: flex-end;
+                display: flex; justify-content: center;
                 .write_btn {
-                    background-color: #fff;
+                    background-color: #4f99ff;
                     display: inline-block;
                     width: 85px; line-height: 45px;
-                    color: #505050; text-align: center;
+                    color: #fff; text-align: center;
                     border-radius: 10px;
                 }
             }
@@ -1118,7 +1118,7 @@
 #go_top {
     width: 50px; line-height: 50px;
     border-radius: 50%;
-    background-color: blue;
+    background-color: #487eeb;
     color: #fff;
     text-align: center;
     font-size: 23px;
@@ -1265,28 +1265,30 @@
 }
 // 하단영역
 #footer {
-    background-color: skyblue; color: #fff;
+    background-color: #181818;
+    color: #919191;
     > div {
         .center {width: 57%; margin: 0 auto;}
     }
     .f_top {
-        background-color: #ffb51e;
+        border-top: 1px solid #242424;
+        border-bottom: 1px solid #242424;
         .center {
             .f_menu {
                 display: flex;
                 li {
                     margin-right: 15px; line-height: 40px;
-                    a {color: #fff; font-size: 13px;}
+                    a {color: #919191; font-size: 13px;}
                 }
             }
         }
     }
     .f_bot {
-        padding: 30px 0;
+        padding: 10px 0 22px;
         .center {
             display: flex; align-items: center;
             .left {
-                width: 10%; margin-right: 40px;
+                width: 5%; margin-right: 20px;
                 .f_logo {
                     width: 100%; height: 100%;
                     border-radius: 50%;
@@ -1294,11 +1296,10 @@
             }
             .right {
                 font-size: 12px;
-                // span {margin-right: 8px;}
                 .bar {
                     &::after {
                         content: ""; width: 1px; height: 11px;
-                        background-color: #0080a3; display: inline-block;
+                        background-color: #383838; display: inline-block;
                         left: 0; top: 0; margin: 0 6px;
                         position: relative; top: 1px; left: 1px;
                     }
