--- a/html/scss/_layout.scss
+++ b/html/scss/_layout.scss
@@ -121,7 +121,7 @@
         position: absolute;
         top: 0;
         // right: 0;
-        right: -100%;
+        right: -120%;
         width: 500px;
         height: 100vh;
         padding: 20px 35px;
@@ -950,8 +950,6 @@
     .where {
         display: flex; justify-content: center;
         padding: 120px 0 150px;
-
-        background-color: #aaa;
         .center {
             width: 57%;
             .title {
@@ -963,7 +961,7 @@
                     text-align: center;
                     margin-bottom: 38px;
                     font-size: 18px;
-                    span {color: #00d3ff;}
+                    span {color: #049df7;}
                 }
                 .local_list_wrap,.theme_list_wrap {
                     width: 100%;
@@ -1001,10 +999,10 @@
             .btn_wrap {
                 display: flex; justify-content: center;
                 .hotel_more {
-                    background-color: #00d3ff;
+                    background-color: #049df7;
                     display: block; padding: 10px 20px;
                     border-radius: 10px;
-                    font-size: 14px; color: #341300;
+                    font-size: 14px; color: #fff;
                     i {margin-left: 7px;}
                 }
             }
@@ -1031,15 +1029,13 @@
     .many_hotel {
         display: flex; justify-content: center;
         padding: 100px 0 120px;
-
-        background-color: rgb(221, 221, 221);
         .center {
             width: 57%;
             .text_box {
                 text-align: center; margin-bottom: 80px;
                 .title {
                     font-size: 21px; margin-bottom: 15px;
-                    span {color: #00d3ff;}
+                    span {color: #049df7;}
                 }
                 .sub_title {
                     font-size: 15px;
@@ -1048,14 +1044,15 @@
             .hotel_box_wrap {
                 display: flex; justify-content: space-between;
                 align-items: center; flex-wrap: wrap;
-                a {
+                .hotel_box {
                     width: 31.333%; margin: 1%;
                     color: #000;
                     display: none;
                     &:nth-child(1),&:nth-child(2),&:nth-child(3) {
-                        display: flex;
+                        display: block;
                     }
-                    .hotel_box {
+                    > a {
+                        color: #000;
                         .img_wrap {
                             width: 100%; height: 267px;
                             margin-bottom: 12px;
@@ -1066,7 +1063,7 @@
                         }
                         .rank {
                             margin-bottom: 5px;
-                            i {color: #ffe600; margin-right: 5px;}
+                            i {color: #ffc137; margin-right: 5px;}
                         }
                         .hotel_title {
                             font-size: 18px; font-weight: 600;
@@ -1081,33 +1078,33 @@
             }
             .more_btn {
                 width: 180px; line-height: 38px;
-                background-color: #00d3ff;
+                background-color: #049df7;
                 display: block;
                 text-align: center;
                 margin: 10px auto 0;
                 border-radius: 10px;
-                color: #341300;
+                color: #fff;
             }
         }
     }
     // 호텔페이지 notice 영역
     .notice {
         display: flex; justify-content: center;
-        background-color: #1898c5;
+        background-color: #74b2ed;
         padding: 100px 0;
         .center {
-            width: 70%;
+            width: 57%;
             .notice_wrap {
                 display: flex; justify-content: space-between;
                 .notice_box {
                     text-align: center;
                     color: #fff;
                     span {
-                        font-size: 120px;
+                        font-size: 65px;
                         margin-bottom: 20px;
                     }
                     p {
-                        font-size: 30px; font-weight: 600;
+                        font-size: 23px; font-weight: 600;
                     }
                 }
             }
@@ -1161,11 +1158,12 @@
     .center {
         width: 30%;
         .login_wrap {
-            background-color: #ffb773; border-radius: 5px;
+            background-color: #7cbcef; border-radius: 10px;
             padding: 50px; box-sizing: border-box;
+            color: #fff;
             // position: relative;
             .logo_wrap {
-                width: 25%; margin: 0 auto 10px;
+                width: 23%; margin: 0 auto 16px;
                 // position: absolute; left: 50%; top: -50%;
                 // transform: translateX(-50%);
                 img {width: 100%; height: 100%;border-radius: 50%;}
@@ -1186,22 +1184,23 @@
                         width: 100%; height: 50px;
                         box-sizing: border-box;
                         padding-left: 12px; font-size: 22px;
-                        border: 2px solid #666666;
+                        border: 2px solid #858585;
                         border-radius: 5px;
                     }
                 }
                 #login_btn {
                     width: 100%; border: none;
-                    height: 55px; border-radius: 5px;
-                    color: #424242; font-size: 22px;
+                    height: 55px; border-radius: 10px;
+                    color: #fff; font-size: 22px;
                     font-weight: 600; margin: 30px 0 10px;
+                    background-color: #404040;
                     cursor: pointer;
                 }
             }
             .go_join {
                 text-align: center; font-size: 15px;
-                color: #666666;
-                a {margin-left: 10px; color: #464646;}
+                color: #303030;
+                a {margin-left: 10px; color: #1e1e1e;}
             }
         }
     }
@@ -1210,15 +1209,15 @@
 #join {
     display: flex;
     justify-content: center; align-items: center;
-    background-color: #ffb773;
+    background-color: #7cbcef;
     .center {
         width: 50%;
         .join_wrap {
-             border-radius: 5px;
+            border-radius: 5px; color: #fff;
             padding: 130px; box-sizing: border-box;
             // position: relative;
             .logo_wrap {
-                width: 25%; margin: 0 auto 10px;
+                width: 23%; margin: 0 auto 16px;
                 // position: absolute; left: 50%; top: -50%;
                 // transform: translateX(-50%);
                 img {width: 100%; height: 100%;border-radius: 50%;}
@@ -1233,33 +1232,34 @@
                 padding-bottom: 50px;
                 position: relative;
                 label {
-                    display: block; margin-bottom: 10px;
-                    font-size: 17px; font-weight: 600;
+                    display: block; margin-bottom: 13px;
+                    font-size: 28px; font-weight: 600;
                 }
                 input {
                     width: 100%; height: 50px;
                     box-sizing: border-box; font-size: 17px;
                     padding-left: 12px; border-radius: 5px;
-                    border: 2px solid #666666;
+                    border: 2px solid #858585;
                 }
                 .msg_box,.re_msg_box {
                     width: 100%;
-                    position: absolute; left: 0; top: 83px;
+                    position: absolute; left: 0; top: 96px;
                     font-size: 13px; line-height: 15px;
                 }
             }
             #join_btn {
                 width: 100%; border: none;
                 height: 55px; border-radius: 5px;
-                color: #424242; font-size: 22px;
+                color: #fff; font-size: 22px;
                 font-weight: 600; margin: 30px 0 10px;
+                background-color: #404040;
                 cursor: pointer;
             }
         }
         .go_login {
             text-align: center; font-size: 15px;
-            color: #666666;
-            a {margin-left: 10px; color: #464646;}
+            color: #303030;
+            a {margin-left: 10px; color: #1e1e1e;}
         }
     }
 }
