--- a/html/scss/_layout_1200px.scss
+++ b/html/scss/_layout_1200px.scss
@@ -5,7 +5,7 @@
         .center {width: 77%;}
         .h_bot {
             .gnb {
-                > li {margin-left: 40px;}
+                > li {margin-left: 25px;}
             }
         }
     }
@@ -66,5 +66,29 @@
                 }
             }
         }
+        // 배너 영역
+        .banner.list {
+            .center {width: 78%;}
+        }
+        // 호텔페이지 where 영역
+        .where {
+            .center {width: 78%;}
+        }
+        // 호텔페이지 many_hotel 영역
+        .many_hotel {
+            .center {width: 78%;}
+        }
+        // 호텔페이지 notice 영역
+        .notice {
+            .center {width: 78%;}
+        }
+    }
+    // 로그인 영역
+    #login {
+        .center {width: 60%;}
+    }
+    // 회원가입 영역
+    #join {
+        .center {width: 80%;}
     }
 }
