--- a/views/index.ejs
+++ b/views/index.ejs
@@ -63,8 +63,8 @@
                     <div class="text_box">
                         <h2 class="slide_title">산 속 호텔 캠핑!</h2>
                         <p class="sub_text">
-                            첫번째 문단입니다.<br>
-                            두번째 문단입니다.
+                            탁 트인 공간에서 느껴보세요.<br>
+                            맑은 공기가 개운합니다.
                         </p>
                         <div class="slide_btn">
                             <a href="#">바로가기</a>
