--- a/views/travel_list.ejs
+++ b/views/travel_list.ejs
@@ -1,3 +1,9 @@
+<% if(!userData){ %>
+    <script>
+        alert("로그인이 필요한 서비스입니다.");
+        location.href = "/login";
+    </script>
+<% } %>
 <!DOCTYPE html>
 <html lang="en">
 <head>
